// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snaphot with data 1`] = `
<div>
  <h1>
    Welcome to Chess Is Hard by Kyle
  </h1>
  <p>
    [{"ID":"0","Name":"Tester"}]
  </p>
</div>
`;

exports[`Snaphot without data 1`] = `
<div>
  <h1>
    Welcome to Chess Is Hard by Kyle
  </h1>
  <p>
    []
  </p>
</div>
`;
